[package]
name = "tramded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.4", features = ["derive"]}
ureq = "2.4.0" # reqwest is a bit too much for just making some POST requests every so often